# mle-titles

./: .gitignore  README.md
Titles/dppTest/android/com.wizzer.mle.title.dpptest/: .classpath  .project  AndroidManifest.xml  project.properties
Titles/dppTest/android/com.wizzer.mle.title.dpptest/res/raw/: playprint.dpp
Titles/dppTest/android/com.wizzer.mle.title.dpptest/res/values/: strings.xml
Titles/dppTest/android/com.wizzer.mle.title.dpptest/src/: DppImageTest.dwp  MleImageActor.wpd  Readme.txt
Titles/dppTest/android/com.wizzer.mle.title.dpptest/src/com/wizzer/mle/title/dpptest/: DppImageTest.java  TitleRegistry.java
Titles/dppTest/java/com.wizzer.mle.title.dpptest/: .classpath  .project  build.xml
Titles/dppTest/java/com.wizzer.mle.title.dpptest/src/: DppImageTest.dwp  MleImageRole.wpd  Readme.txt
Titles/dppTest/java/com.wizzer.mle.title.dpptest/src/com/wizzer/mle/title/dpptest/: DppImageTest.java  DppImageTestData.java  TitleRegistry.java
Titles/dppTest/qt/: Readme.txt
Titles/dppTest/qt/dpptest/: callback.cpp  callback.h  dpptest.pro  main.cpp  master.sh  mlPlatformData.h  title.cpp
Titles/dppTest/qt/workprints/: DppImageTest.dwp  Mle2dSet.wpd  MleImageActor.wpd  MleImageRole.wpd
Titles/helloCube/: Readme.md
Titles/helloCube/qt/actors/CubeActor/: CubeActor.pro
Titles/helloCube/qt/actors/CubeActor/src/: CubeActor.cpp  CubeActor.pro
Titles/helloCube/qt/actors/CubeActor/test/: main.cpp  rtestubs.cpp  unittest.pro
Titles/helloCube/qt/hellocube/: callback.cpp  callback.h  hellocube.pro  main.cpp  mlPlatformData.h  title.cpp
Titles/helloCube/qt/include/: CubeActor.h  CubeActor_global.h  CubeRole.h  CubeRole_global.h  CubeSet.h  CubeSet_global.h  CubeStage.h  CubeStage_global.h  ShapeActor.h  ShapeRole.h  ShapeSet.h
Titles/helloCube/qt/roles/CubeRole/: CubeRole.pro
Titles/helloCube/qt/roles/CubeRole/src/: CubeRole.cpp  CubeRole.pro
Titles/helloCube/qt/roles/CubeRole/test/: main.cpp  rtestubs.cpp  unittest.pro
Titles/helloCube/qt/sets/CubeSet/: CubeSet.pro
Titles/helloCube/qt/sets/CubeSet/src/: CubeSet.cpp  CubeSet.pro
Titles/helloCube/qt/sets/CubeSet/test/: main.cpp  unittest.pro
Titles/helloCube/qt/src/actors/: CubeActor.cpp
Titles/helloCube/qt/src/roles/: CubeRole.cpp
Titles/helloCube/qt/stages/CubeStage/: CubeStage.pro
Titles/helloCube/qt/stages/CubeStage/src/: CubeStage.cpp  CubeStage.pro
Titles/helloCube/qt/stages/CubeStage/test/: main.cpp  rtestubs.cpp  unittest.pro
Titles/helloCube/qt/workprints/: HelloCube.dwp
Titles/helloCube/rehearsal/include/: CubeActor.h  CubeRole.h  CubeSet.h  CubeStage.h  ShapeActor.h  ShapeRole.h  ShapeSet.h
Titles/helloCube/rehearsal/src/actors/: CubeActor.cpp
Titles/helloCube/rehearsal/src/roles/: CubeRole.cpp
Titles/helloCube/rehearsal/src/sets/: CubeSet.cpp
Titles/helloCube/rehearsal/src/stages/: CubeStage.cpp
Titles/helloCube/rehearsal/workprints/: HelloCube.dwp
Titles/helloWorld/java/HelloWorld/: .classpath  .mleproject  .project  build.xml
Titles/helloWorld/java/HelloWorld/src/: Readme.txt
Titles/helloWorld/java/HelloWorld/src/helloworld/actors/: LabelWidgetActor.java
Titles/helloWorld/java/HelloWorld/src/helloworld/roles/: LabelWidgetRole.java
Titles/helloWorld/java/HelloWorld/src/helloworld/title/: HelloWorld.java  TitleData.java  TitleRegistry.java
Titles/helloWorld/java/HelloWorld/workprints/: HelloWorld.dwp
Titles/helloWorld/qt/: Readme.txt
Titles/helloWorld/qt/helloworld/: WidgetActor.h  WidgetRole.h  callback.cpp  callback.h  helloworld.pro  main.cpp  master.sh  mlPlatformData.h  title.cpp
Titles/helloWorld/qt/helloworld/actors/: LabelWidgetActor.cpp  LabelWidgetActor.h
Titles/helloWorld/qt/helloworld/roles/: LabelWidgetRole.cpp  LabelWidgetRole.h
Titles/helloWorld/qt/workprints/: HelloWorld.dwp
Titles/helloWorld/rehearsal/workprints/: HelloWorld.dwp
Titles/imageTest/android/com.wizzer.mle.title.imagetest/: .classpath  .project  AndroidManifest.xml  project.properties
Titles/imageTest/android/com.wizzer.mle.title.imagetest/res/values/: strings.xml
Titles/imageTest/android/com.wizzer.mle.title.imagetest/src/com/wizzer/mle/title/imagetest/: ImageTest.java
Titles/imageTest/java/com.wizzer.mle.title.imagetest/: .classpath  .project
Titles/imageTest/java/com.wizzer.mle.title.imagetest/src/com/wizzer/mle/title/imagetest/: ImageTest.java
Titles/imageTest/qt/: Readme.txt
Titles/imageTest/qt/imagetest/: callback.cpp  callback.h  imagetest.pro  main.cpp  mlPlatformData.h  rtestubs.cpp  title.cpp
Titles/mtea/: Makefile  ismdefs  ismrules
Titles/mtea/media/: Makefile  mandrill.rgb  teapot.iv
Titles/mtea/src/: Makefile  Readme.txt  SpinnerActor.h  SpinnerActor.wpa  SpinnerActor.wpd  mtea.dwp  spinnera.cxx  spinnera.h
Titles/mtea/src/rehearsal/: Makefile
Titles/mtea/src/win32/: Makefile  app.h  app.rc  callback.cxx  callback.h  leafdefs  main.cxx  mtea.dsp  mtea.dsw  texture.cxx  texture.h  title.cxx
Titles/mtea/src/win32/Debug/: Makefile
Titles/mtea/src/win32/Release/: Makefile
Titles/mtea/src/win32/SpinnerActor/: ReadMe.txt  SpinnerActor.cpp  SpinnerActor.dsp  StdAfx.cpp  StdAfx.h
Titles/null/directx/: Readme.txt
Titles/null/directx/src/: callback.cxx  callback.h  main.cxx  mlPlatformData.h  title.cxx
Titles/null/directx/src/resources/: null.rc  resource.h
Titles/null/directx/workprints/: null.dwp
Titles/null/gtk/: CMakeLists.txt
Titles/null/gtk/cmake/: FindSoGtk.cmake
Titles/null/gtk/null/: CMakeLists.txt  callback.cpp  callback.h  main.cpp  master.sh  title.cpp
Titles/null/gtk/null/cmake/: FindMagicLantern.cmake  FindSoGtk.cmake
Titles/null/gtk/workprints/: null.dwp
Titles/null/linux/null/: .cproject  .project  NEWS  README  configure.ac
Titles/null/linux/null/src/: Makefile.am  callback.cpp  main.cpp  master.sh  mlPlatformData.h  null.cpp  title.cpp
Titles/null/linux/null/workprints/: null.dwp
Titles/null/qt/: Readme.txt
Titles/null/qt/null/: callback.cpp  main.cpp  master.sh  null.pro  title.cpp
Titles/null/qt/workprints/: null.dwp
Titles/null/rehearsal/workprints/: null.dwp
